Revert "Heeey aah Merge"
This reverts commit beae2f241b01f28eaf35e9e5d6ec84b96d7c8d7c.

--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,4 @@ sysinfo.txt
 Assets/Scenes/Pal_Schakonat.unity
 Assets/Scenes/Pal_Schakonat.unity
 Assets/Scenes/Pal_Schakonat.unity
+Assets/Scenes/Pal_Schakonat.unity
