--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,4 @@ Assets/Scenes/Pal_Schakonat.unity
 Assets/Scenes/Pal_Schakonat.unity
 Assets/Scenes/Pal_Schakonat.unity
 Assets/Scenes/Pal_Schakonat.unity
+Assets/Scenes/Pal_Schakonat.unity
