--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,4 @@ Assets/Scenes/Pal_Schakonat.unity
 Assets/Scenes/Pal_Schakonat.unity
 Assets/Scenes/Pal_Schakonat.unity
 Assets/Scenes/Pal_Schakonat.unity
+Assets/Scenes/Pal_Schakonat.unity
